--- a/columbianissan/assets/css/style.css
+++ b/columbianissan/assets/css/style.css
@@ -586,7 +586,7 @@ a img:hover {
 	SERVICE & PARTS
 	Section includes all styling for Service & Parts department pages.
 */
-
+/* cart truck parts */
 #content-primary-ctp .container-wrapper {
 	padding: 2em 1.5em;
 }
@@ -622,6 +622,96 @@ a img:hover {
 			min-height: 575px;
 		}
 	} /* END 1366px */
+
+/* email parts department */
+#content-primary-epd .header {
+	background: rgba(0, 0, 0, 0) url("../img/location/loc-banner-dark.jpg") repeat scroll 0 0 / 1000px 200px;
+	color: #fff;
+	border-bottom: 1px solid grey;
+	padding: 1.5em 2.5em;
+	margin: 0 0 1em 0;
+}
+#content-primary-epd .header h1 {
+	display: inline-block;
+	border-bottom: 1px solid #fff;
+	padding: 0 0 0.4em 0;
+	margin: 0 0 0.1em 0;
+}
+
+.epd-form {
+	padding: 0.5em 2.5em 1em;
+}
+.epd-form .block {
+	position: relative;
+	padding: 1em 0;
+	margin: 0.5em 0 0 0;
+}
+.epd-form .block:before {
+	content: '';
+	position: absolute;
+	left: 0;
+	top: 0;
+	height: 1px;
+	width: 100%;
+	background: linear-gradient(to right, purple, #2980b9);
+	background-color: #000;
+}
+.epd-form .block:first-child {
+	padding-top: 0;
+	margin-top: 0;
+}
+.epd-form .block:first-child:before {
+	display: none;
+}
+.epd-form h3 {
+	color: #e67e22;
+	letter-spacing: 0.2em;
+}
+.epd-form .box {
+	margin: 0 0 1.5em 0;
+}
+.epd-form label {
+	display: block;
+	color: rgb(6, 73, 115);
+	margin: 0 0 0.5em 0;
+}
+.epd-form label span {
+	color: #e74c3c;
+}
+
+.epd-form input {
+	width: 15em;
+	padding: 0.5em 1em;
+}
+.epd-form input[type="submit"] {
+	width: auto;
+	background: rgba(0, 0, 0, 0) linear-gradient(to bottom, rgba(239, 209, 86, 1) 0%, rgba(241, 196, 15, 1) 100%) repeat scroll 0 0;
+	border: 1px solid rgba(243, 156, 18, 1);
+	border-radius: 0.3em;
+	box-shadow: 0 1px 0 rgba(236, 240, 241, 1) inset;
+	color: #2c3e50;
+	display: inline-block;
+	letter-spacing: 0.3em;
+	text-shadow: 0 -1px 0 rgba(236, 240, 241, 0.5);
+	font-weight: normal;
+	font-size: 1em;
+}
+.epd-form input[type="submit"]:hover {
+	background: rgba(0, 0, 0, 0) linear-gradient(to bottom, rgba(237, 192, 11, 1) 1%, rgba(241, 196, 15, 1) 100%) repeat scroll 0 0;
+}
+.epd-form textarea {
+	width: 100%;
+	max-width: 400px;
+	height: 100px;
+	padding: 0.5em 1em;
+}
+.epd-form .captcha-holder {
+	margin: 0 0 1.5em 0;
+}
+.epd-form small {
+	color: rgb(6, 73, 115);
+	margin: 0 0 0 0.5em;
+}
 
 /*
 	WEBFORMS
