--- a/columbianissan/assets/css/style.css
+++ b/columbianissan/assets/css/style.css
@@ -44,6 +44,48 @@ img {
 @media screen and (min-width: 1200px) {} /* END 1200px */
 @media screen and (min-width: 1366px) {} /* END 1366px */
 
+input.btn-submit {
+	width: auto !important;
+	background: rgba(0, 0, 0, 0) linear-gradient(to bottom, rgba(239, 209, 86, 1) 0%, rgba(241, 196, 15, 1) 100%) repeat scroll 0 0;
+	border: 1px solid rgba(243, 156, 18, 1);
+	border-radius: 0.3em;
+	box-shadow: 0 1px 0 rgba(236, 240, 241, 1) inset;
+	color: #2c3e50;
+	display: inline-block;
+	letter-spacing: 0.3em;
+	text-shadow: 0 -1px 0 rgba(236, 240, 241, 0.5);
+	font-weight: normal;
+	font-size: 1em;
+}
+input.btn-submit:hover {
+	background: rgba(0, 0, 0, 0) linear-gradient(to bottom, rgba(237, 192, 11, 1) 1%, rgba(241, 196, 15, 1) 100%) repeat scroll 0 0;
+}
+.form label {
+	display: block;
+	color: rgb(6, 73, 115);
+	margin: 0 0 0.5em 0;
+}
+.form label span {
+	color: #e74c3c;
+}
+.form input {
+	width: 15em;
+	padding: 0.5em 1em;
+}
+.form textarea {
+	width: 100%;
+	max-width: 400px;
+	height: 100px;
+	padding: 0.5em 1em;
+}
+.form .captcha-holder {
+	margin: 0 0 1.5em 0;
+}
+.form small {
+	color: rgb(6, 73, 115);
+	margin: 0 0 0 0.5em;
+}
+
 /* DEVICE DISPLAY PROPERTIES */
 .hide-mobile {
 	display: none !important;
@@ -624,14 +666,14 @@ a img:hover {
 	} /* END 1366px */
 
 /* email parts department */
-#content-primary-epd .header {
+.form-header {
 	background: rgba(0, 0, 0, 0) url("../img/location/loc-banner-dark.jpg") repeat scroll 0 0 / 1000px 200px;
 	color: #fff;
 	border-bottom: 1px solid grey;
 	padding: 1.5em 2.5em;
 	margin: 0 0 1em 0;
 }
-#content-primary-epd .header h1 {
+.form-header h1 {
 	display: inline-block;
 	border-bottom: 1px solid #fff;
 	padding: 0 0 0.4em 0;
@@ -669,48 +711,6 @@ a img:hover {
 }
 .epd-form .box {
 	margin: 0 0 1.5em 0;
-}
-.epd-form label {
-	display: block;
-	color: rgb(6, 73, 115);
-	margin: 0 0 0.5em 0;
-}
-.epd-form label span {
-	color: #e74c3c;
-}
-
-.epd-form input {
-	width: 15em;
-	padding: 0.5em 1em;
-}
-.epd-form input[type="submit"] {
-	width: auto;
-	background: rgba(0, 0, 0, 0) linear-gradient(to bottom, rgba(239, 209, 86, 1) 0%, rgba(241, 196, 15, 1) 100%) repeat scroll 0 0;
-	border: 1px solid rgba(243, 156, 18, 1);
-	border-radius: 0.3em;
-	box-shadow: 0 1px 0 rgba(236, 240, 241, 1) inset;
-	color: #2c3e50;
-	display: inline-block;
-	letter-spacing: 0.3em;
-	text-shadow: 0 -1px 0 rgba(236, 240, 241, 0.5);
-	font-weight: normal;
-	font-size: 1em;
-}
-.epd-form input[type="submit"]:hover {
-	background: rgba(0, 0, 0, 0) linear-gradient(to bottom, rgba(237, 192, 11, 1) 1%, rgba(241, 196, 15, 1) 100%) repeat scroll 0 0;
-}
-.epd-form textarea {
-	width: 100%;
-	max-width: 400px;
-	height: 100px;
-	padding: 0.5em 1em;
-}
-.epd-form .captcha-holder {
-	margin: 0 0 1.5em 0;
-}
-.epd-form small {
-	color: rgb(6, 73, 115);
-	margin: 0 0 0 0.5em;
 }
 
 /*
