--- a/columbianissan/assets/css/style.css
+++ b/columbianissan/assets/css/style.css
@@ -68,7 +68,8 @@ input.btn-submit:hover {
 .form label span {
 	color: #e74c3c;
 }
-.form input {
+.form input,
+.form select {
 	width: 15em;
 	padding: 0.5em 1em;
 }
@@ -643,7 +644,7 @@ a img:hover {
 	display: inline-block;
 	padding: 0.5em;
 }
-.svc-pd-logo img {
+.logo-wrappers-l .svc-pd-logo img {
 	height: 80px;
 }
 
