--- a/columbianissan/assets/css/style.css
+++ b/columbianissan/assets/css/style.css
@@ -60,18 +60,23 @@ input.btn-submit {
 input.btn-submit:hover {
 	background: rgba(0, 0, 0, 0) linear-gradient(to bottom, rgba(237, 192, 11, 1) 1%, rgba(241, 196, 15, 1) 100%) repeat scroll 0 0;
 }
+input.btn-reset {
+	width: auto !important;
+}
 .form label {
 	display: block;
 	color: rgb(6, 73, 115);
 	margin: 0 0 0.5em 0;
 }
-.form label span {
+.form label span,
+.req {
 	color: #e74c3c;
 }
 .form input,
 .form select {
 	width: 15em;
 	padding: 0.5em 1em;
+	max-width: 100%;
 }
 .form textarea {
 	width: 100%;
@@ -85,6 +90,13 @@ input.btn-submit:hover {
 .form small {
 	color: rgb(6, 73, 115);
 	margin: 0 0 0 0.5em;
+}
+.form select.width-8em {
+	width: 8em;
+	margin-right: 1em;
+}
+.form select.width-5em {
+	width: 5em;
 }
 
 /* DEVICE DISPLAY PROPERTIES */
@@ -712,6 +724,26 @@ a img:hover {
 }
 .epd-form .box {
 	margin: 0 0 1.5em 0;
+}
+
+/* carfinancing*/
+.box-side {
+	display: inline-block;
+	margin-right: 1em;
+}
+.resradio label,
+.resradio input {
+	display: inline-block;
+	width: auto !important;
+}
+.resradio input {
+	margin: 0 5px;
+}
+.inline-block {
+	display: inline-block !important;
+}
+.margin-right-1em {
+	margin-right: 1em !important;
 }
 
 /*
