--- a/columbianissan/assets/css/style.css
+++ b/columbianissan/assets/css/style.css
@@ -11,13 +11,16 @@
 	margin: 0px;
 }
 html {
+	font-family: Lato, Helvetica, Arial, sans-serif;
+}
+body {
+	height: auto;
+	width: 100vw;
+	display: block;
 	background-color: #dbdbdb;
 	background-image: url("data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAcAAAAHCAYAAADEUlfTAAAAK0lEQVQIW2NkwA2MGXHIGQPFz2KTBEuANKFLwiXQJVEkkCUxJGCSWCVAkgAgugY78ir7SwAAAABJRU5ErkJggg==");
 	background-repeat: repeat;
 	overflow-x: hidden;
-}
-body {
-	font-family: Lato, Helvetica, Arial, sans-serif;
 }
 img {
 	height: auto;
@@ -49,17 +52,17 @@ img {
 	display: none !important;
 }
 .hide-desktop {
-	display: initial;
+	display: inherit;
 }
 @media screen and (min-width: 480px) {} /* END 480px */
 @media screen and (min-width: 768px) {
 	.hide-mobile {
-		display: initial;
+		display: inherit !important;
 	}
 } /* END 768px */
 @media screen and (min-width: 992px) {
 	.hide-tablet {
-		display: initial;
+		display: inherit !important;
 	}
 	.hide-desktop {
 		display: none !important;
@@ -173,10 +176,24 @@ img {
 /* WRAPPERS - CONTAINERS */
 .wrapper-content {
 	height: auto;
+	max-width: 1000px;
+	display: block;
+	background-color: #ffffff;
+	box-shadow: 0px 0px 10px #777777;
+}
+.wrapper-section {
+	height: auto;
 	width: 100%;
 	display: block;
 	padding: 10px;
 	box-sizing: border-box;
+}
+.wrapper-header,
+.wrapper-footer {
+	height: auto;
+	max-width: 1000px;
+	display: block;
+	margin: 0px auto;
 }
 .wrapper-video {
 	height: 0px;
@@ -193,7 +210,16 @@ img {
 }
 @media screen and (min-width: 480px) {} /* END 480px */
 @media screen and (min-width: 768px) {} /* END 768px */
-@media screen and (min-width: 992px) {} /* END 992px */
+@media screen and (min-width: 992px) {
+	.wrapper-content {
+		margin: 20px auto;
+		box-shadow: 0px 0px 10px #777777;
+	}
+	.wrapper-section {
+		padding: 10px 40px;
+		box-sizing: border-box;
+	}
+} /* END 992px */
 @media screen and (min-width: 1200px) {} /* END 1200px */
 @media screen and (min-width: 1366px) {} /* END 1366px */
 
@@ -364,6 +390,11 @@ a:hover {
 	text-decoration: none;
 	color: #b36c76;
 }
+a:active,
+a:visited,
+a:after {
+	color: #00ff00 !important;
+}
 a img:hover {
 	opacity: 0.80;
 }
@@ -372,6 +403,20 @@ a img:hover {
 	text-decoration: none;
 	cursor: pointer;
 	color: inherit;
+}
+.button {
+	padding: 10px;
+	box-sizing: border-box;
+	border-radius: 8px;
+	border: 1px solid #777777;
+	background-color: #fac40f;
+	text-align: center;
+	text-transform: uppercase;
+	color: #777777;
+}
+.button:hover {
+	background-color: #810a1a;
+	color: #ffffff;
 }
 @media screen and (min-width: 480px) {} /* END 480px */
 @media screen and (min-width: 768px) {} /* END 768px */
@@ -384,51 +429,75 @@ a img:hover {
 	Section incldues Header and Footer Styles
 */
 /* #HEADER-PRIMARY */
-#header-primary {}
-#header-logo {
-	height: 68px;
+#header-primary {
+	height: auto;
 	width: 100%;
 	display: block;
+	background-color: #ffffff;
+	box-shadow: 1px 0px 1px #777777;
 }
-#header-logo-image {
-	height: 68px;
-	width: 75px;
+#header-primary .col-md-1,
+#header-primary .col-md-2,
+#header-primary .col-md-3,
+#header-primary .col-md-4,
+#header-primary .col-md-5,
+#header-primary .col-md-6,
+#header-primary .col-md-7,
+#header-primary .col-md-8,
+#header-primary .col-md-9,
+#header-primary .col-md-10,
+#header-primary .col-md-11,
+#header-primary .col-md-12 {
+	padding: 0px;
+}
+#header-logo {
+	height: 80px;
 	display: inline-block;
 	float: left;
 }
-#header-logo-image img,
-#header-logo-image a {
+#header-logo-image {
+	height: 100%;
+	display: inline-block;
+	float: left;
+}
+#header-logo-image a,
+#header-logo-image img {
 	height: 100%;
 	width: auto;
 	display: block;
 }
 #header-logo-text {
 	height: auto;
-	width: 210px;
 	display: inline-block;
-	padding-left: 10px;
 	float: left;
+	text-align: center;
 }
 #header-logo-text h1 {
 	font-family: Helvetica, Arial, sans-serif;
+	font-size: 3.00em;
 	font-weight: 700;
+	line-height: 80px;
 	text-transform: uppercase;
 	color: #777777;
 	margin: 0px;
+	padding: 0px;
 }
-#header-address {}
-#header-address .link-phone {
+#header-address {
+	height: 80px;
 	display: inline-block;
-}
-#header-address .link-phone:after {
-	content: "|";
-	padding: 0px 5px;
+	padding: 5px 0px !important;
+	box-sizing: border-box;
+	float: right;
+	text-align: right;
 }
 #header-address a {
+	height: auto;
+	width: 100%;
 	display: block;
 }
-#header-nav nav {
-	display: none;
+#header-address a:nth-child(3),
+#header-address a:nth-child(4) {
+	font-size: 0.80em;
 }
 @media screen and (min-width: 480px) {} /* END 480px */
 @media screen and (min-width: 768px) {} /* END 768px */
@@ -442,7 +511,22 @@ a img:hover {
 	width: 100%;
 	display: block;
 	background-color: #810a1a;
+	box-shadow: 0px -1px 10px #777777;
 	text-align: center;
+}
+#footer-primary .col-md-1,
+#footer-primary .col-md-2,
+#footer-primary .col-md-3,
+#footer-primary .col-md-4,
+#footer-primary .col-md-5,
+#footer-primary .col-md-6,
+#footer-primary .col-md-7,
+#footer-primary .col-md-8,
+#footer-primary .col-md-9,
+#footer-primary .col-md-10,
+#footer-primary .col-md-11,
+#footer-primary .col-md-12 {
+	padding: 0px;
 }
 #footer-primary p,
 #footer-primary a {
@@ -479,7 +563,13 @@ a img:hover {
 }
 @media screen and (min-width: 480px) {} /* END 480px */
 @media screen and (min-width: 768px) {} /* END 768px */
-@media screen and (min-width: 992px) {} /* END 992px */
+@media screen and (min-width: 992px) {
+	#footer-primary {
+		position: absolute;
+		padding: 20px 0px;
+		box-sizing: border-box;
+	}
+} /* END 992px */
 @media screen and (min-width: 1200px) {} /* END 1200px */
 @media screen and (min-width: 1366px) {} /* END 1366px */
 
@@ -511,38 +601,81 @@ a img:hover {
 }
 @media screen and (min-width: 480px) {} /* END 480px */
 @media screen and (min-width: 768px) {} /* END 768px */
-@media screen and (min-width: 992px) {} /* END 992px */
+@media screen and (min-width: 992px) {
+	#banner-home {
+		padding-top: 40px;
+	}
+} /* END 992px */
 @media screen and (min-width: 1200px) {} /* END 1200px */
 @media screen and (min-width: 1366px) {} /* END 1366px */
 
 /* #HOME-SECONDARY-NAV */
+#home-secondary-nav {}
+#home-secondary-nav {
+	padding: 0px 10px !important;
+	box-sizing: border-box;
+}
 #home-secondary-nav ul {
-	margin-bottom: 0px;
-}
-#home-secondary-nav li a {
-	height: auto;
-	width: 100%;
-	display: block;
-	padding: 20px;
-	background-color: #fac40f;
-	font-size: 1.25em;
-	text-align: center;
-	text-transform: uppercase;
-	color: #777777;
-}
-#home-secondary-nav li a:hover {
-	background-color: #f5d657;
+	list-style: none;
 }
 @media screen and (min-width: 480px) {} /* END 480px */
 @media screen and (min-width: 768px) {} /* END 768px */
-@media screen and (min-width: 992px) {} /* END 992px */
+@media screen and (min-width: 992px) {
+	#home-secondary-nav {
+		padding: 10px 40px !important;
+	}
+	#home-secondary-nav ul {
+		margin: 0px;
+	}
+	#home-secondary-nav li {
+		height: 60px;
+		width: 145px;
+		display: inline-block;
+		margin: 0px 5px;
+		float: left;
+		position: relative;
+		vertical-align: middle;
+	}
+	#home-secondary-nav li:first-child {
+		margin-left: 0px;
+	}
+	#home-secondary-nav li:last-child {
+		margin-right: 0px;
+	}
+	#home-secondary-nav a {
+		height: 60px;
+		width: 145px;
+		display: block;
+		position: relative;
+		vertical-align: middle;
+		padding: 10px;
+		box-sizing: border-box;
+		border-radius: 8px;
+		box-shadow: 0px 0px 4px #777777;
+		background-color: #fac40f;
+		font-size: 1.10em;
+		font-weight: 700;
+		line-height: 1.20;
+		text-transform: uppercase;
+		text-align: center;
+		color: #777777;
+	}
+	#home-secondary-nav a:hover {
+		background-color: #810a1a;
+		color: #ffffff;
+	}
+} /* END 992px */
 @media screen and (min-width: 1200px) {} /* END 1200px */
 @media screen and (min-width: 1366px) {} /* END 1366px */
 
 /* #HOME-PROMOTIONS */
 @media screen and (min-width: 480px) {} /* END 480px */
 @media screen and (min-width: 768px) {} /* END 768px */
-@media screen and (min-width: 992px) {} /* END 992px */
+@media screen and (min-width: 992px) {
+	#home-promotions {
+		padding-bottom: 40px;
+	}
+} /* END 992px */
 @media screen and (min-width: 1200px) {} /* END 1200px */
 @media screen and (min-width: 1366px) {} /* END 1366px */
 
